--- a/index.html
+++ b/index.html
@@ -3,32 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SOLO KIU</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caveat+Brush&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link type="image/png" sizes="16x16" rel="icon" href="icons/icons8-valorando-office80-16.png">
 </head>
 <body>
     <div class="container-lg contenedor">
         <h1>SOLO KIU</h1>
+        <img src="icons/brim.webp" alt="Brim qlon" class="brim">
         <table class="table table-dark">
             <tr>
                  <th>Usuario</th>
                  <th>Tag</th>
                  <th>Datos</th>
                  <th>Ver más Información</th>
+                 <th>Dias restantes</th>
             </tr>
             <tr>
                  <td class="nickname">ReoNa</td>
                  <td>#00248</td>
-                 
                  <td><iframe src="https://tracker.gg/overlays/overlay/4c24e32d-f1bf-4a01-8b54-1c4cdd4ec33e" frameborder="0" class="data"></iframe></td>
-                 <td><a href="https://vtl.lol/id/8e45b181-bcd3-5776-9d24-e7852d31cefb" target="_blank">VLG</a></td>
+                 <td>
+                    <button type="button" class="btn info"><a href="https://vtl.lol/id/8e45b181-bcd3-5776-9d24-e7852d31cefb" target="_blank">VLG</a></button>
+                    <button type="button" class="btn danger"><a href="https://tracker.gg/valorant/profile/riot/ReoNa%2300248/overview?playlist=competitive" target="_blank">TRACKER</a></button>
+                </td>
+                 <td>
+                    <button class="btn btn-success" type="button" disabled>
+                    <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                    <span role="status" id="countdown"></span>
+                  </button>
+                </td>
             </tr>
             <tr>
                  <td class="nickname">demonjuan</td>
                  <td>#3145</td>
                  <td><iframe src="https://tracker.gg/overlays/overlay/f25fb7b7-69ed-4866-a983-c4d999f0f485" frameborder="0" class="data"></iframe></td>
-                 <td><a href="https://vtl.lol/id/7228074b-7dab-5ff7-91d3-0c03a5a60023" target="_blank">VLG</a></td>
+                 <td>
+                    <button type="button" class="btn info"><a href="https://vtl.lol/id/7228074b-7dab-5ff7-91d3-0c03a5a60023" target="_blank">VLG</a></button>
+                    <button type="button" class="btn danger"><a href="https://tracker.gg/valorant/profile/riot/demonjuan%233145/overview?playlist=competitive" target="_blank">TRACKER</a></button>
+                 <td>
+                    <button class="btn btn-success" type="button" disabled>
+                    <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                    <span role="status" id="countdown2"></span>
+                  </button>
+                </td>
             </tr>
          </table>
     </div>
