--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </head>
 <body>
     <div class="container-lg contenedor">
-        <h1>SOLO KIU</h1>
-        <img src="icons/brim.webp" alt="Brim qlon" class="brim">
+        <h1 id="titulo">SOLO KIU</h1>
         <table class="table table-dark">
             <tr>
                  <th>Usuario</th>
